# profiles_demo

./: .pre-commit-config.yaml  manage.py  pyproject.toml
home/: urls.py  views.py
home/templates/home/: about_project.html  base.html  find_me.html  home.html  navbar.html
rio/: .pre-commit-config.yml  asgi.py  settings.py  urls.py  views.py  wsgi.py
users/: models.py
users/migrations/: 0001_initial.py  0002_userprofile_user.py  0003_userprofile_age.py
