[tool.poetry]
name = "rio"
version = "0.1.0"
description = ""
authors = ["Atsushi Toda <todaatsushi0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"
pre-commit = "^2.15.0"
isort = "^5.9.3"
black = "^21.9b0"
django-extensions = "^3.1.3"
flake8 = "^3.9.2"
geocoder = "^1.38.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
